update cms for doc and preview

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -6,6 +6,10 @@
   <title>Content Manager</title>
   <!-- netlify identity widget -->  
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script>
+   {{ $css := resources.Get "./css/main.css" | resources.PostCSS (dict "config" "./assets/css/postcss.config.js" "noMap" true) | minify  | resources.Fingerprint "md5" }}
+   CMS.registerPreviewStyle({{ $css.Permalink }});
+  </script>
   </head>
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
